pod-security-vpol/restricted/require-run-as-non-root-user/require-run-as-non-root-user.yaml
apiVersion: policies.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
    name: require-run-as-non-root-user
    annotations:
        policies.kyverno.io/title: Require Run As Non-Root User
        policies.kyverno.io/category: Pod Security Standards (Restricted)
        policies.kyverno.io/severity: critical
        policies.kyverno.io/subject: Pod
        kyverno.io/kubernetes-version: "1.22-1.23"
        policies.nirmata.io/remediation-docs: "https://docs.nirmata.io/policysets/podsecurity/restricted/require-run-as-non-root-user/"
        policies.nirmata.io/remediation: "https://github.com/nirmata/kyverno-policies/tree/main/pod-security/restricted/require-run-as-non-root-user/remediate-require-run-as-non-root-user.yaml"
        policies.kyverno.io/description: >
            Containers must be required to run as non-root users. This policy ensures that the fields  spec.securityContext.runAsUser, spec.containers[*].securityContext.runAsUser, spec.initContainers[*].securityContext.runAsUser, and spec.ephemeralContainers[*].securityContext.runAsUser is either unset or set to a number greater than zero.

spec:
    validationActions: [Audit]
    evaluation:
        background:
            enabled: true
    matchConstraints:
        resourceRules:
            - apiGroups: [""]
              apiVersions: ["v1"]
              resources: ["pods"]
              operations: ["CREATE", "UPDATE"]
    validations:
        - expression: >
            (!has(object.spec.securityContext) ||
            !has(object.spec.securityContext.runAsUser) ||
            object.spec.securityContext.runAsUser > 0) &&

            object.spec.containers.orValue([]).all(c,
              !has(c.securityContext) ||
              !has(c.securityContext.runAsUser) ||
              c.securityContext.runAsUser > 0) &&

            (!has(object.spec.initContainers) ||
            object.spec.initContainers.all(c,
              !has(c.securityContext) ||
              !has(c.securityContext.runAsUser) ||
              c.securityContext.runAsUser > 0)) &&

            (!has(object.spec.ephemeralContainers) ||
            object.spec.ephemeralContainers.all(c,
              !has(c.securityContext) ||
              !has(c.securityContext.runAsUser) ||
              c.securityContext.runAsUser > 0))
          message: >-
            Running the container as root user is not allowed. The fields spec.securityContext.runAsUser, spec.containers[*].securityContext.runAsUser, spec.initContainers[*].securityContext.runAsUser, and spec.ephemeralContainers[*].securityContext.runAsUser must either be unset or set to a number greater than zero.
