pod-security-vpol/restricted/require-run-as-non-root-user/e2e/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: require-run-as-non-root-user-policy
spec:
  steps:
  - name: test-require-run-as-non-root-user
    try:
    - apply:
        file: ../require-run-as-non-root-user.yaml
    - assert:
        file: policy-assert.yaml
    - patch:
        resource:
          apiVersion: policies.kyverno.io/v1alpha1
          kind: ValidatingPolicy
          metadata:
            name: require-run-as-non-root-user
          spec:
            validationActions: [Deny]
    - assert:
        file: enforce-policy-assert.yaml
    - apply:
        file: good-resource.yaml
    - sleep:
        duration: 20s
    - apply:
        expect:
        - check:
            ($error != null): true
        file: bad-resource.yaml
